--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ionic-angular": "3.7.1",
     "ionicons": "3.0.0",
     "jquery": "^3.2.1",
+    "ng2-firebase": "^1.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
