--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "^2.0.1",
     "angularfire2": "^5.0.0-rc.3",
+    "cordova-plugin-camera": "^2.4.1",
     "cordova-sqlite-storage": "^2.0.4",
     "firebase": "^4.6.0",
     "ionic-angular": "3.7.1",
@@ -42,7 +43,8 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-camera": {}
     }
   }
 }
