--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@angular/http": "4.4.3",
     "@angular/platform-browser": "4.4.3",
     "@angular/platform-browser-dynamic": "4.4.3",
+    "@ionic-native/camera": "^4.3.2",
     "@ionic-native/core": "4.3.0",
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "^2.0.1",
     "angularfire2": "^5.0.0-rc.3",
+    "cordova-android": "~6.3.0",
     "cordova-plugin-camera": "^2.4.1",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.4",
@@ -33,6 +35,8 @@
     "cordova-plugin-whitelist": "^1.3.1",
     "cordova-sqlite-storage": "^2.0.4",
     "firebase": "^4.6.0",
+    "firebase-rxjs": "^0.1.2",
+    "firebase-rxjs-angular": "^0.1.2",
     "ionic-angular": "3.7.1",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -40,8 +44,7 @@
     "ng2-firebase": "^1.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-android": "~6.3.0"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
